--- a/.github/workflows/build_repository.yaml
+++ b/.github/workflows/build_repository.yaml
@@ -1,12 +1,12 @@
+---
 name: Make Repository
 
 on:
   push:
     branches:
       - master
-      - debug
   schedule:
-    - cron: "21 4 * * 0"
+    - cron: "0 2 * * 1"
 
 jobs:
   build_repository:
@@ -20,33 +20,21 @@ jobs:
       uses: kopp/build-aur-packages@v1
       with:
         packages: >
-          arduino-ide-bin
-          azure-cli
-          conan
-          micronucleus-git
-          microsoft-edge-stable-bin
-          neovim-symlinks
-          onedrive-abraunegg
-          python-pydub
-          python-selenium
-          selenium-manager
-          uv-bin
-          jmtpfs
-          qtfm
-          skypeforlinux-stable-bin
-          srecord
-          vdhcoapp-bin
-          visual-studio-code-bin
-          xfig
+          aconfmgr-git
+          advcpmv
+          amdgpu-fan
+          yay-bin
 
     - name: List generated Files
       run: ls -1 > ${{ github.workspace }}/files.txt
+
     - name: Remove the current data from the release
       uses: kopp/action-delete-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: aurci2
+
     - name: Upload Files to Release
       uses: softprops/action-gh-release@v1
       env:
